tests/paczka1/fuzzy1/78934746.err
Error in line 2: Iicw S610 29,
Error in line 4: 08msuqr S826 28,4
Error in line 13: 08msuqr A63 10,3
Error in line 19: Rwe S826 90,7
Error in line 26: Rwe A63 46,59
Error in line 30: 0dE A63 18,1
Error in line 37: Rwe A11 82,5
